--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Username</p>
         <input type="text" name="" id="usernameInput">
         <p>Password</p>
-        <input type="text" id="passwordInput">
+        <input type="password" id="passwordInput">
         <br>
 
         <input type="submit" value="Login" id="loginButton">
